--- a/rock paper scissors/rockpaperscissors.css
+++ b/rock paper scissors/rockpaperscissors.css
@@ -26,3 +26,9 @@ button{
     font-size: 24px;
     font-weight: 700;
 }
+
+#score{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+}
